(include_subdirs unqualified)

(test
 (name aoc23_test)
 (libraries advent_of_code_2023 core alcotest)
 (modules Aoc23_test Day00_test Day01_test Day02_test Day03_test Day04_test Day05_test Day06_test Day07_test Day08_test Day09_test Day10_test Day11_test Day12_test Day13_test Day14_test Day15_test Day16_test Day17_test Day18_test Day19_test Day20_test Day21_test Day22_test Day24_test))




